flapivor/tests/m3/hopix/typechecker/bad/77-if-then-else-02.hopix
val main : Int =
    if true then 0 else "String"